[package]
name = "janitor"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.86"
async-tungstenite = { version = "0.29", features = ["tokio-runtime"] }
chrono = { version = "=0.4.39", features = ["serde"] }
dotenv = "0.15.0"
fuel-core-types = "0.41.7"
fuels = { version = "0.66.10", features = ["fuel-core-lib"] }
futures-util = "0.3"
pangea-client = "0.3.6"
schemars = "0.8.0"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
spark-market-sdk = "0.6.5" 
thiserror = "1.0.63"
tokio = { version = "1.41.0", features = ["rt", "macros", "time"] }
tokio-tungstenite = { version = "0.26.1", features = ["native-tls"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = "2.3.1"
